2004-08-19  Shane Landrum <epicene@pobox.com>

	Docs for tree-related classes:
	* en/Gtk/TreeView.xml
	* en/Gtk/TreeSelection.xml
	* en/Gtk/TreeSelectionForeachFunc.xml: Added docs for tree operations.
	* en/Gtk/RowsReorderedArgs.xml: Event data for list/tree datamodels.
	* en/Gtk/SelectCursorRowArgs.xml: Event data for TreeView event.
	* en/Gtk/TreeSelection.xml: Cleanup of extraneous TBA.

2004-08-19  Shane Landrum <epicene@pobox.com>

	* en/Gtk/RowHasChildToggledArgs.xml
	* en/Gtk/RowInsertedArgs.xml
	* en/Gtk/RowChangedArgs.xml
	* en/Gtk/RowDeletedArgs.xml: Docs for event 
	argument classes related to ListStore.
	* en/Gtk/ListStore.xml: minor wording fixes.
	
2004-08-18  Shane Landrum <epicene@pobox.com>

	* en/Gtk/ListStore.xml: Added docs.
	
2004-08-13  Shane Landrum <epicene@pobox.com>

	* DragBeginArgs.xml
	* DragDataDeleteArgs.xml
	* DragDataGetArgs.xml
	* DragDataReceivedArgs.xml
	* DragDropArgs.xml
	* DragEndArgs.xml
	* DragLeaveArgs.xml
	* DragMotionArgs.xml: Filled in event properties.

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/Widget.xml: Filled in some event information,
	removed a lot of extraneous "To be added" in remarks fields

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/TextAppearance.xml
	* en/Gtk/TextAttributes.xml: Classes to control text presentation.

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/TreeCellDataFunc.xml
	* en/Gtk/TreeDataList.xml
	* en/Gtk/TreeDestroyCountFunc.xml
	* en/Gtk/TreeIter.xml
	* en/Gtk/TreeIterCompareFunc.xml
	* en/Gtk/TreeModel.xml
	* en/Gtk/TreeModelForeachFunc.xml
	* en/Gtk/TreeSelectionFunc.xml
	* en/Gtk/TreeSortable.xml
	* en/Gtk/TreeView.xml: Various updates to tree object docs.
	
2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/*Args.xml: Documented many handler arguments classes.

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/HTML.xml
	* en/Gtk/HTMLCommandType.xml
	* en/Gtk/HTMLFontStyle.xml
	* en/Gtk/HTMLParagraphAlignment.xml