@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Delegate that specifies the shape of methods that run when the clipboard receives data.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
