@@ -39,9 +39,9 @@
         <ReturnType>System.UInt32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'uint'</returns>
-        <remarks>To be added</remarks>
+        <summary>The time this selection was gotten from the source widget.</summary>
+        <returns>A <see cref="T:System.UInt32" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Info">
@@ -52,8 +52,8 @@
       </ReturnValue>
       <Docs>
         <summary>To be added</summary>
-        <returns>To be added: an object of type 'uint'</returns>
-        <remarks>To be added</remarks>
+        <returns>A <see cref="T:System.UInt32" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="SelectionData">
@@ -63,9 +63,9 @@
         <ReturnType>Gtk.SelectionData</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.SelectionData'</returns>
-        <remarks>To be added</remarks>
+        <summary>The data from the selection.</summary>
+        <returns>a <see cref="T:Gtk.SelectionData" /></returns>
+        <remarks />
       </Docs>
     </Member>
   </Members>
