@@ -1,4 +1,13 @@
 2004-08-19  Shane Landrum <epicene@pobox.com>
+	
+	* en/Gtk/ClipboardReceivedFunc.xml: Added docs for classes related
+	to drag and drop.
+	* en/Gtk/SelectionData.xml: Added docs for DND selection data.
+	* en/Gtk/SelectionGetArgs.xml: Event data for selection get events.
+	* en/Gtk/SelectionReceivedArgs.xml: Event data for selection
+	receive events.
+
+2004-08-19  Shane Landrum <epicene@pobox.com>
 
 	Docs for tree-related classes:
 	* en/Gtk/TreeView.xml
